--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: compress
     <span class="projects-link">PROJECTS</span>
     <div class="content">
       <div class="about-info">
-        {{ content }}
+        Test
       </div>
     </div>
   </div>
