--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,9 @@ layout: compress
     <span class="projects-link">PROJECTS</span>
     <div class="content">
       <div class="about-info">
-        Test
+        <h1> Hello and Welcome </h1>
+        After working mainly in front end design I've made the switch into a more technical role that is now finding
+        the balance between Design and Big Data in order to bring the conceptual down to a comprehensive narrative.
       </div>
     </div>
   </div>
