--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,8 +33,9 @@ layout: compress
     <div class="content">
       <div class="about-info">
         <h1> Hello and Welcome </h1>
-        After working mainly in front end design I've made the switch into a more technical role that is now finding
+        My name is Justin Ma and after working mainly in front end design I've made the switch into a more technical role that is now finding
         the balance between Design and Big Data in order to bring the conceptual down to a comprehensive narrative.
+        <h2>Data Science with a focus on NLP, Gaming/Interactive media analytics,and Machine Learning within Big Data </h2>
       </div>
     </div>
   </div>
