--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,10 +32,7 @@ layout: compress
     <span class="projects-link">PROJECTS</span>
     <div class="content">
       <div class="about-info">
-        <h1> Hello and Welcome </h1>
-        My name is Justin Ma and after working mainly in front end design I've made the switch into a more technical role that is now finding
-        the balance between Design and Big Data in order to bring the conceptual down to a comprehensive narrative.
-        <h2>Data Science with a focus on NLP, Gaming/Interactive media analytics,and Machine Learning within Big Data </h2>
+        {{ content }}
       </div>
     </div>
   </div>
